v3.8.0-beta.1 (2021-04-20)
--------------------------

* Fix BTS-374: thread race between ArangoSearch link unloading and storage
  engine WAL flushing.

* Improve parallelism capabilities of arangorestore.

  arangorestore can now dispatch restoring data chunks of a collection to idle
  background threads, so that multiple restore requests can be in flight for the
  same collection concurrently.

  This can improve restore speed in situations when there are idle threads left
  (number of threads can be configured via arangorestore's `--threads` option)
  and the dump file for the collection is large.

  The improved parallelism is only used when restoring dumps that are in the
  non-enveloped format. This format has been introduced with ArangoDB 3.8.
  The reason is that dumps in the non-enveloped format only contain the raw
  documents, which can be restored independent of each other, i.e. in any order.
  However, the enveloped format may contain documents and remove operations,
  which need to be restored in the original order.

* Fix crashes during arangorestore operations due to usage of wrong pointer
  value for updating user permissions.
  
* Fixed BTS-360 and ES-826: sporadic ArangoSearch error `Invalid RL encoding in
  'dense_fixed_offset_column_key'`.

* Add HTTP REST API endpoint POST `/_api/cursor/<cursor-id>` as a drop-in
  replacement for PUT `/_api/cursor/<cursor-id>`. The POST API is functionally
  equivalent to the existing PUT API. The benefit of using the POST API is that
  HTTP POST requests will not be considered as idempotent, so proxies may not
  retry them if they fail. This was the case with the existing PUT API, as HTTP
  PUT requests can be considered idempotent according to the HTTP specification.

  The POST API is not used internally by ArangoDB's own requests in this
  version. This means that compatibility to older versions of ArangoDB that do
  not provide the new API is ensured.
